Ensure the SynchronousCompositorMojo is destroyed before InputHandlerProxy

Since the SynchronousCompositorProxy (base class of SynchronousCompositorMojo)
holds onto a reference to the InputHandlerProxy it must be destroyed
before the InputHandlerProxy is destroyed.

BUG=816538

Change-Id: I990b5a427970b28219464267de41a28b1fabb5d0
Reviewed-on: https://chromium-review.googlesource.com/938485
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539481}
Former-commit-id: 7bea5cdcec3f22ec74569b537541e55ff15a653c